--- a/public/stylesheets/rtl/employee/profile.css
+++ b/public/stylesheets/rtl/employee/profile.css
@@ -425,7 +425,7 @@ html>body #nav ul.scriptaculously{/*ie shit*/
     padding:7px 10px;
     border:none;
     text-align:center;
-    width:auto;
+    width:100px;
     cursor:pointer;
 }
 
@@ -525,7 +525,7 @@ html>body #nav ul.scriptaculously{/*ie shit*/
     font-family:arial;
     font-size:14px;
     font-weight:bold;
-    margin-right:150px;
+    margin-right:214px;
     margin-top:10px;
     padding:7px 10px;
     border:none;
