style issue fixed in employee_leave_reset_by_employee , fixes #1204
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1270 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/employee_attendance/employee_leave_reset_by_employee.css
+++ b/public/stylesheets/employee_attendance/employee_leave_reset_by_employee.css
@@ -68,7 +68,7 @@
 }
 
 .advanced_options{
-    margin-left:90px;
+    margin-left:0;
     margin-top:5px;
     width:600px;
     float: left;
@@ -88,9 +88,9 @@
     background : #fff url(../../images/form_bg/smalltextbox.jpg) no-repeat;
     height : 43px;
     width : 150px;
-    float: none;
+    float: left;
 }
 #form-content{
     width:300px;
-    float: none;
+    float: left;
 }
