bug fixed => message not showing if there is no old batch subject in assigning old batch subjects
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1271 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/batches/show.html.erb
+++ b/app/views/batches/show.html.erb
@@ -60,6 +60,10 @@
     <div class="flash-msg" style="text-align: left;"><%= t('subject_transfer_message') %>:<br /> <%= flash[:subject_import].join("")%></div>
   <% end %>
 
+  <% unless flash[:no_subject_error].nil? %>
+    <div class="flash-msg"><%= flash[:no_subject_error] %></div>
+  <% end %>
+
   <% unless flash[:fees_import].nil? %>
     <div class="flash-msg" style="text-align: left;"><%= t('fee_import_message') %>:<br /> <%= flash[:fees_import].join("")%></div>
   <% end %>
