sreeshanth(translation changes  )
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1276 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/employee_attendances/index.css
+++ b/public/stylesheets/employee_attendances/index.css
@@ -212,3 +212,9 @@ table.table{
     padding:5px;
     width:150px;
 }
+.label-field-pair input {
+    margin: 5px 0 0 5px;
+}
+.label-checkbox-pair {
+    padding: 0 0 0 0;
+}
