--- a/public/stylesheets/payroll/edit_payroll_details.css
+++ b/public/stylesheets/payroll/edit_payroll_details.css
@@ -41,7 +41,7 @@
     font-family:arial;
     font-size:14px;
     font-weight:bold;
-    margin-left:270px;
+    margin-left:403px;
     margin-top:30px;
     padding:7px 10px;
     border:none;
@@ -66,6 +66,7 @@
     height: 1px;
     border: none;
     margin-left: 140px;
+    width:474px;
 }
 
 #employee_profile_heading {
