sreeshanth(style issues  )
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1279 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/employee/_rejected_employee_select_list.erb
+++ b/app/views/employee/_rejected_employee_select_list.erb
@@ -31,6 +31,6 @@
      <% end %>
 
   <% else %>
-<p class="flash-msg"> <%= t('message') %> </p>
+<p class="flash-msg"> <%= t('message1') %> </p>
   <% end %>
 </ul>
