sreeshanth(style issues  )
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1280 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/employee/admission4.css
+++ b/public/stylesheets/employee/admission4.css
@@ -174,8 +174,8 @@
 }
 **/
 #information{
-    height:100px;
-    width:614px;
+    height:auto;
+    width:auto;
     margin-left:0px;
     padding-left:50px
 }
