--- a/public/stylesheets/rtl/employee/admission4.css
+++ b/public/stylesheets/rtl/employee/admission4.css
@@ -174,8 +174,8 @@
 }
 **/
 #information{
-    height:100px;
-    width:614px;
+    height:auto;
+    width:auto;
     margin-right:0px;
     padding-right:50px
 }
