--- a/app/views/exam/generated_report2.erb
+++ b/app/views/exam/generated_report2.erb
@@ -56,7 +56,7 @@
               <% exam_score = ExamScore.find_by_student_id(student.id,:conditions=>{:exam_id=>exam.id}) unless exam.nil? %>
               <% unless exam.nil? %>
                 <% if exam_group.exam_type == 'Marks' %>
-                  <%= exam_score.nil? ? '-' : exam_score = ""  ? '-' : "#{exam_score.marks || "-"}/"+exam.maximum_marks.to_s %>
+                  <%= exam_score.nil? ? '-' : "#{exam_score.marks || "-"}/"+exam.maximum_marks.to_s %>
                 <% elsif exam_group.exam_type == 'Grades'%>
                   <%= exam_score.nil? ? '-' : (exam_score.grading_level || '-') %>
                 <% else %>
