bug fixed => calculation bug in exam report, fixes #1214
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1285 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/exam/generated_report2.erb
+++ b/app/views/exam/generated_report2.erb
@@ -60,7 +60,7 @@
                 <% elsif exam_group.exam_type == 'Grades'%>
                   <%= exam_score.nil? ? '-' : (exam_score.grading_level || '-') %>
                 <% else %>
-                  <%= exam_score.nil? ? '-' : exam_score = ""  ? '-' + "[#{(exam_score.grading_level || "-")}]": "#{(exam_score.marks || "-")}" +"/"+exam.maximum_marks.to_s+"[#{(exam_score.grading_level || "-")}]" %>
+                  <%= exam_score.nil? ? '-' : "#{(exam_score.marks || "-")}" +"/"+exam.maximum_marks.to_s+"[#{(exam_score.grading_level || "-")}]" %>
                 <% end %>
               <% else %>
                 <%= "#{t('n_a')}" %>
