sreeshanth(style issues )
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1286 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/rtl/class_timings/index.css
+++ b/public/stylesheets/rtl/class_timings/index.css
@@ -13,6 +13,7 @@
 .label-checkbox-pair {
     height : 50px;
     margin-right : 30px;
+    padding: 0 0 0 10px;
 }
 .submit-button{
     width:100px;
@@ -27,7 +28,7 @@
     float:right;
     font-size:14px;
     font-weight:bold;
-    margin:0 170px 0 0;
+    margin:0 211px 0 0;
     padding:5px;
 }
 
