--- a/public/stylesheets/class_timings/index.css
+++ b/public/stylesheets/class_timings/index.css
@@ -13,6 +13,7 @@
 .label-checkbox-pair {
     height : 50px;
     margin-left : 30px;
+     padding: 0 0 0 10px;
 }
 .submit-button{
     width:100px;
@@ -27,7 +28,7 @@
     float:left;
     font-size:14px;
     font-weight:bold;
-    margin:0 0 0 170px;
+    margin:0 0 0 211px;
     padding:5px;
 }
 
