sreeshanth(style issues and functionality)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1293 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/finance/_show_fee_discounts.erb
+++ b/app/views/finance/_show_fee_discounts.erb
@@ -52,7 +52,7 @@
       <td class="col-1">
         <div class="edit"><%= link_to_remote "#{t('edit_text')}", :url => {:action => 'edit_fee_discount', :id => f.id} %> |&nbsp; </div>
 
-        <div class="delete"><%= link_to_remote "#{t('delete_text')}", :url => {:action => 'delete_fee_discount', :id => f.id} %></div>
+        <div class="delete"><%= link_to_remote "#{t('delete_text')}",:confirm=>"#{t('delete_confirm_msg')}",:url => {:action => 'delete_fee_discount', :id => f.id} %></div>
       </td>
         <% end %>
     </tr>
