bug fixed => message not shown in additional exam deletion, fixes #1213
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1294 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/additional_exams/new.html.erb
+++ b/app/views/additional_exams/new.html.erb
@@ -89,6 +89,9 @@
           <div class="text-input-bg"><%= f.calendar_date_select :end_time %></div>
         </div>
 
+        <%= f.hidden_field :maximum_marks, :value=>0 %>
+        <%= f.hidden_field :minimum_marks, :value=>0 %>
+
         <%= submit_tag "", :value => "► #{t('save')}", :class => "submit_button" %>
 
       <% end %>
