--- a/app/views/additional_exam_groups/show.html.erb
+++ b/app/views/additional_exam_groups/show.html.erb
@@ -85,7 +85,11 @@
             <td class="col-1"><%= in_place_editor_field :additional_exam, :minimum_marks,{},{:cols=>1} %></td>
             <td class="col-1">
               <small><%= link_to "#{t('edit_text')}", edit_additional_exam_group_additional_exam_path(@additional_exam_group, additional_exam) %></small>
+              <% if @additional_exam.removable? %>
               <small><%= link_to "#{t('delete_text')}", [@additional_exam_group, additional_exam], :method => 'delete', :confirm => "#{t('delete_confirm_msg')}" %></small>
+              <% else %>
+                <small><s><%= t('delete_text') %></s></small>
+              <% end %>
             </td>
             <% else %>
               <td class="col-1"><span><%= additional_exam.maximum_marks %></span></td>
