--- a/app/views/additional_exam_groups/show.html.erb
+++ b/app/views/additional_exam_groups/show.html.erb
@@ -113,7 +113,11 @@
             <% if permitted_to? :edit, :additional_exams %>
             <td class="col-1">
               <small><%= link_to "#{t('edit_text')}", edit_additional_exam_group_additional_exam_path(@additional_exam_group, exam) %></small>
+              <% if @exam.removable? %>
               <small><%= link_to "#{t('delete_text')}", [@additional_exam_group, exam], :method => 'delete', :confirm => "#{t('delete_confirm_msg')}" %></small>
+              <% else %>
+                <small><s><%= t('delete_text') %></s></small>
+              <% end %>
             </td>
             <% end %>
           </tr>
