--- a/app/views/finance/_add_particulars_create_form.html.erb
+++ b/app/views/finance/_add_particulars_create_form.html.erb
@@ -29,10 +29,12 @@
 <div class="label-field-pair2">
   <div class="label-container2"><label><%= t('particulars') %> :</label></div>
     <div class="input-container2">
-      <div class="opt"><%= radio_button("particulars","select","all",:checked => true) %><%= t('all') %></div>
-     <div class="opt"><%= radio_button("particulars","select'","student",
+      <div class="opt"><%= radio_button("particulars","select","all",
+      {:checked => true, :onchange => "#{remote_function(:url => {:action => "student_or_student_category"},
+        :with => "'select_value='+value")}"}) %><%= t('all') %></div>
+     <div class="opt"><%= radio_button("particulars","select","student",
       {:onchange => "#{remote_function(:url => {:action => "student_or_student_category"},
-        :with => "'select_value='+value")}"}) %> <%= t('admission_number') %> </div>
+        :with => "'select_value='+value")}"}) %><%= t('admission_number') %> </div>
       <div class="opt"> <%= radio_button("particulars","select","category",
       {:onchange => "#{remote_function(:url => {:action => "student_or_student_category"},
         :with => "'select_value='+value")}"}) %><%= t('student_category') %></div>
