sreeshanth(style issues )
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1301 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/finance/fee_defaulters_pdf.erb
+++ b/app/views/finance/fee_defaulters_pdf.erb
@@ -22,7 +22,7 @@
 <div id="page-yield">
 
   <div class="hor_line"></div>
-  <h2><%= t('fees_defaulters') %></h2>
+  <h2><%= t('fees_defaulters_text') %></h2>
   <div class="hor_line"></div>
 
 
