--- a/app/views/finance/_fees_particulars_list.html.erb
+++ b/app/views/finance/_fees_particulars_list.html.erb
@@ -16,15 +16,17 @@
 #KIND, either express or implied.  See the License for the
 #specific language governing permissions and limitations
 #under the License. -%>
-
+<br/>
+  <div class="linker"><%= link_to_remote "#{t('add_particular')}", :url => { :action => 'add_particulars_new',:id => @collection_date.id} %></div>
+<br/>
 <% unless @finance_fee_particulars_list.empty? %>
   <table id="listing" align="center" width="100%" cellpadding="1" cellspacing="1">
     <tr class="tr-head">
       <td><%= t('sl_no') %></td>
       <td><%= t('particulars') %></td>
       <td><%= t('student_text') %> <%= t('category') %></td>
-      <td><%= t('admission_number') %></td>
-      <td><%= t('amount') %></td>
+      <td><%= t('admission_no') %></td>
+      <td><%= t('amount') %> (<%= currency %>)</td>
       <td><%= t('created_date') %> </td>
       <td></td>
 
