sreeshanth(style issues and flash msg misssing)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1304 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/finance/donors.html.erb
+++ b/app/views/finance/donors.html.erb
@@ -27,6 +27,7 @@
 </div>
 
 <div id="page-yield">
+  <% unless flash[:notice].nil? %><p class="flash-msg"><%= flash[:notice] %></p><% end %>
   <h4> <%= t('list_of_donors') %> </h4>
   <table id="listing">
     <tr class="tr-head">
