--- a/app/views/finance/liability.html.erb
+++ b/app/views/finance/liability.html.erb
@@ -26,6 +26,8 @@
   </div>
 </div>
 <div id="page-yield">
+  <div id="flash_box">
+  </div>
   <% unless flash[:notice].nil? %><p class="flash-msg"><%= flash[:notice] %></p><% end %>
   <div class="box">
   <div class="link-box">
