sreeshanth(style issues and flash msg misssing)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1308 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/finance/_asset_list.html.erb
+++ b/app/views/finance/_asset_list.html.erb
@@ -34,7 +34,7 @@
 
         <td class="col-1">
           <%= link_to_remote t('edit_text'), :url => { :action => 'edit_asset', :id => a.id } %> |
-          <%= link_to_remote t('delete_text'), :url => { :action => 'delete_asset', :id => a.id } %>
+          <%= link_to_remote t('delete_text'), :url => { :action => 'delete_asset', :id => a.id } ,:confirm=>t('delete_confirm_msg')%>
         </td>
 
       </tr>
