--- a/app/views/finance/_transaction_triggers_list.html.erb
+++ b/app/views/finance/_transaction_triggers_list.html.erb
@@ -22,6 +22,6 @@
     <li class="list<%= cycle('odd','even') %>">
       <div class="category-name"><%= trigger.finance_category.name %> - <%= trigger.percentage %></div>
       <div class="category-delete"><%= link_to_remote t('edit_text'),:url=>{:controller=>'finance',:action=>'transaction_trigger_edit',:id=>trigger.id} %></div>
-      <div class="category-delete"><%= link_to_remote t('delete_text'),:url=>{:controller=>'finance',:action=>'transaction_trigger_delete',:id=>trigger.id} %></div></li>
+      <div class="category-delete"><%= link_to_remote t('delete_text'),:confirm=>"#{t('delete_confirm_msg')}",:url=>{:controller=>'finance',:action=>'transaction_trigger_delete',:id=>trigger.id} %></div></li>
   <% end %>
 </ul>
