--- a/app/views/finance/asset.html.erb
+++ b/app/views/finance/asset.html.erb
@@ -18,32 +18,34 @@
 #under the License. -%>
 
 <div id="content-header">
-   <img src="/images/show_finance.png" alt="" />
-   <h1><%= t('asset_liability_management') %></h1>
-   <h3><%= t('assets') %></h3>
+  <img src="/images/show_finance.png" alt="" />
+  <h1><%= t('asset_liability_management') %></h1>
+  <h3><%= t('assets') %></h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
 </div>
 <div id="page-yield">
+  <div id="flash_box">
+  </div>
   <% unless flash[:notice].nil? %><p class="flash-msg"><%= flash[:notice] %></p><% end %>
   <div class="box">
-  <div class ="link-box">
-    <div class="link-heading">
-      <%= link_to_function("#{t('create_text')}") { |page|
-        page.replace_html 'modal-box', :partial => 'create_asset_form'
-        page << "Modalbox.show($('modal-box'), {title: '#{t('create_new_asset')}', width: 500});"
-      } %>
+    <div class ="link-box">
+      <div class="link-heading">
+        <%= link_to_function("#{t('create_text')}") { |page|
+          page.replace_html 'modal-box', :partial => 'create_asset_form'
+          page << "Modalbox.show($('modal-box'), {title: '#{t('create_new_asset')}', width: 500});"
+        } %>
+      </div>
+      <div class="link-descr"> <%= t('creates_new_assets') %> </div>
     </div>
-    <div class="link-descr"> <%= t('creates_new_assets') %> </div>
+
+
+    <div class="link-box">
+      <div class="link-heading"><%= link_to t('view'), :action => "view_asset" %> </div>
+      <div class="link-descr"> <%= t('asset_view') %></div>
+    </div>
+
+    <div id="modal-box" style="display:none;"></div>
   </div>
-
-
-  <div class="link-box">
-    <div class="link-heading"><%= link_to t('view'), :action => "view_asset" %> </div>
-    <div class="link-descr"> <%= t('asset_view') %></div>
-  </div>
-
-  <div id="modal-box" style="display:none;"></div>
-</div>
 </div>
