--- a/app/views/finance/automatic_transactions.html.erb
+++ b/app/views/finance/automatic_transactions.html.erb
@@ -27,6 +27,11 @@
 </div>
 
 <div id="page-yield">
+  <div id="flash_box">
+  </div>
+  <% unless flash[:notice].nil? %>
+    <p class="flash-msg"> <%= flash[:notice] %> </p>
+  <% end %>
   <div class="box">
   <div class="link-heading">
     <%= link_to_function("#{t('create_text')}") { |page|
