added content for head
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1309 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,7 @@
     <%= calendar_date_select_includes 'red' %>
 
     <%= javascript_include_tag "calendar_date_select/locale/#{I18n.locale}.js" %>
-    
+    <%= yield :head %>
   </head>
 
   <body>
