--- a/public/stylesheets/employee_attendance/leaves.css
+++ b/public/stylesheets/employee_attendance/leaves.css
@@ -17,7 +17,7 @@
     font-family:arial;
     font-size:14px;
     font-weight:bold;
-    margin-left:270px;
+    margin-left:211px;
     margin-top:30px;
     padding:7px 10px;
     border:none;
@@ -478,4 +478,6 @@
     text-decoration:none;
     color:black;
 }
-
+#inner-tab-menu ul li {
+    width: 150px;
+}
