--- a/app/views/grading_levels/index.html.erb
+++ b/app/views/grading_levels/index.html.erb
@@ -22,7 +22,7 @@
   <h1><%= t('exams_text') %></h1>
   <h3><%= t('grading_levels_text') %></h3>
   <div id="app-back-button">
-      <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
+    <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
 </div>
 <div id="inner-tab-menu">
@@ -31,31 +31,32 @@
   </ul>
 </div>
 <div id="page-yield">
-
-    <% unless flash[:notice].nil? %>
+  <div id="flash_box">
+  </div>
+  <% unless flash[:notice].nil? %>
     <p class="flash-msg"> <%= flash[:notice] %> </p>
   <% end %>
 
- <div class="box">
-   <div class="label-field-pair">
-     <label for="student_course"><%= t('batch') %>
-<%= image_tag("loader.gif", :align => "absmiddle", :border => 0, :id => "loader", :style =>"display: none;" ) %>
-   </label>
-   <div class="text-input-bg">
-<%= select :batch, :id,
-  @batches.map {|b| [b.full_name, b.id] },
-  {:prompt => "#{t('common')}"},
-  {:onchange => "#{remote_function(
-  :url => { :action => 'show' },
-  :with => "'batch_id='+value",
-  :before => "Element.show('loader')",
-  :success => "Element.hide('loader')"  )}"} %>
-   </div></div>
+  <div class="box">
+    <div class="label-field-pair">
+      <label for="student_course"><%= t('batch') %>
+        <%= image_tag("loader.gif", :align => "absmiddle", :border => 0, :id => "loader", :style =>"display: none;" ) %>
+      </label>
+      <div class="text-input-bg">
+        <%= select :batch, :id,
+          @batches.map {|b| [b.full_name, b.id] },
+          {:prompt => "#{t('common')}"},
+          {:onchange => "#{remote_function(
+          :url => { :action => 'show' },
+          :with => "'batch_id='+value",
+          :before => "Element.show('loader')",
+          :success => "Element.hide('loader')"  )}"} %>
+      </div></div>
 
 
-<div id="grading-levels" ><%= render :partial => "grading_levels" %></div>
-<div id="modal-box" style="display:none;"></div>
+    <div id="grading-levels" ><%= render :partial => "grading_levels" %></div>
+    <div id="modal-box" style="display:none;"></div>
 
 
+  </div>
 </div>
-    </div>
