--- a/app/views/finance/categories.html.erb
+++ b/app/views/finance/categories.html.erb
@@ -18,25 +18,26 @@
 #under the License. -%>
 
 <div id="content-header">
-    <img src="/images/show_finance.png" alt="" />
-    <h1><%= t('finance_management') %></h1>
-    <h3><%= t('categories') %></h3>
+  <img src="/images/show_finance.png" alt="" />
+  <h1><%= t('finance_management') %></h1>
+  <h3><%= t('categories') %></h3>
   <div id="app-back-button">
-   <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
+    <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
 </div>
 
 
 <div id="page-yield">
-<% unless flash[:notice].nil? %><p class="flash-msg"><%= flash[:notice] %></p><% end %>
-<div class="box">
+  <div id="flash_box"></div>
+  <% unless flash[:notice].nil? %><p class="flash-msg"><%= flash[:notice] %></p><% end %>
+  <div class="box">
     <div class="link-heading">
       <%= link_to_remote t('create_finance_category'), :url => { :action => 'categories_new'} %>
     </div>
-  <div class="link-descr"> <%= t('create_category') %></div>
+    <div class="link-descr"> <%= t('create_category') %></div>
 
-  <div id="category-list"><%= render :partial => "category_list" %></div>
-  <div id="modal-box" style="display:none;"></div>
+    <div id="category-list"><%= render :partial => "category_list" %></div>
+    <div id="modal-box" style="display:none;"></div>
 
-</div>
+  </div>
 </div>
