--- a/app/views/finance/fee_collection_view.html.erb
+++ b/app/views/finance/fee_collection_view.html.erb
@@ -18,21 +18,22 @@
 #under the License. -%>
 
 <div id="content-header">
-      <img src="/images/show_finance.png" alt="" />
-      <h1><%= t('fee_collection_dates') %></h1>
+  <img src="/images/show_finance.png" alt="" />
+  <h1><%= t('fee_collection_dates') %></h1>
   <h3><%= t('view_fee_collection_dates') %></h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
 </div>
 <div id="page-yield">
-
+  <div id="flash_box"></div>
+  <% unless flash[:notice].nil? %><p class="flash-msg"><%= flash[:notice] %></p><% end %>
   <div id="batch">
     <div class="label-field-pair"><label><%= t('select_batch') %> : </label>
       <div class="text-input-bg"> <%= select("id",:id,@batchs.map { |c| [c.full_name, c.id] },
-        {:prompt => "#{t('select_batch')}"},
-        {:onChange => "#{remote_function(:url => {:action => "fee_collection_dates_batch"}, :with => "'id='+value")}"})%> </div>
-  </div>
+          {:prompt => "#{t('select_batch')}"},
+          {:onChange => "#{remote_function(:url => {:action => "fee_collection_dates_batch"}, :with => "'id='+value")}"})%> </div>
+    </div>
   </div>
   <div id="fee_collection_dates"></div>
   <div id="modal-box" style="display:none;"></div>
