fixed exam acess bug #1350
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1330 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/batches/show.html.erb
+++ b/app/views/batches/show.html.erb
@@ -28,7 +28,7 @@
 
 <div id="inner-tab-menu">
   <ul>
-    <%  if permitted_to? :index,:exam_groups %>
+    <%  if permitted_to? :index,:exam_groups and @batch.allow_exam_acess(@current_user)%>
       <li><%= link_to "#{t('exams_text')}", batch_exam_groups_path(@batch) %> </li>
     <% end %>
 
