--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -30,6 +30,7 @@
     <%= stylesheet_link_tag([@direction+'_layouts/dashboard', @direction+'_styles/ui.all'])%>
     <%= stylesheet_link_tag(*get_stylesheets) %>
     <%= stylesheet_link_tag @direction+'modalbox' %>
+    <%= stylesheet_link_tag 'autosuggest-menu.css' %>
 
     <%= javascript_include_tag :defaults, :cache => 'cache/javascripts/all' %>
     <%= javascript_include_tag 'scripts/nicetitle', 'droplicious' %>
@@ -37,7 +38,9 @@
     <%= javascript_include_tag 'prototype' %>
     <%= javascript_include_tag 'builder' %>
     <%= javascript_include_tag 'modalbox' %>
-
+    <%= javascript_include_tag 'jquery/jquery.min.js' %>
+    <%= javascript_include_tag 'jquery/jquery-ui.min.js'%>
+    <%= javascript_include_tag 'jquery/jquery.hotkeys.js'%>
   </head>
 
   <body>
@@ -55,6 +58,9 @@
         </div>
         <div id="outer-main-menu">
           <%= render :partial=>"layouts/main_menu" %>
+        </div>
+        <div id="outer-autosuggest-menu">
+          <%= render :partial => "layouts/autosuggest_menu" %>
         </div>
       </div>
     </div>
