--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -955,3 +955,13 @@ tr.tr-blank{
     font-size:14px;
     text-decoration:underline;
 }
+#outer-autosuggest-menu{
+float: left;
+margin-left: 130px;
+margin-top: 6px;
+width: 245px;
+}
+#autosuggest_menu_input{
+width: 300px;
+height: 14px;
+}
