--- a/app/views/layouts/_autosuggest_menu.html.erb
+++ b/app/views/layouts/_autosuggest_menu.html.erb
@@ -35,7 +35,7 @@
 
     options.push({'menutype': 'action',
       'label' : '<%=t('autosuggest_menu.search_employees')%>: <strong>'+query+'</strong>',
-      'value' : "/employee/advanced_search?search%5Border%5D=&search%5Bfirst_name_or_middle_name_or_last_name_like%5D="+query+"&search%5Bemployee_number_equals%5D="+query+"&search%5Bgender_equals%5D=&search%5Bblood_group_like%5D=&search%5Bmarital_status_like%5D=&search%5Bnationality_id_equals%5D=&search%5Bemployee_category_id_equals%5D=&search%5Bemployee_department_id_equals%5D=&search%5Bemployee_position_id_equals%5D=&search%5Bemployee_grade_id_equals%5D=&adv_search%5Bdoj_option%5D=&adv_search%5Bdoj_year%5D=&adv_search%5Bdob_option%5D=&adv_search%5Bdob_year%5D=&search%5Bstatus_equals%5D=&commit=Search"})
+      'value' : "/employee/advanced_search?search%5Border%5D=&search%5Bfirst_name_or_middle_name_or_last_name_like%5D="+query+"&search%5Bemployee_number_equals%5D=&search%5Bgender_equals%5D=&search%5Bblood_group_like%5D=&search%5Bmarital_status_like%5D=&search%5Bnationality_id_equals%5D=&search%5Bemployee_category_id_equals%5D=&search%5Bemployee_department_id_equals%5D=&search%5Bemployee_position_id_equals%5D=&search%5Bemployee_grade_id_equals%5D=&adv_search%5Bdoj_option%5D=&adv_search%5Bdoj_year%5D=&adv_search%5Bdob_option%5D=&adv_search%5Bdob_year%5D=&search%5Bstatus_equals%5D=&commit=Search"})
 
     response(options)
   }
