Timetable bug fix #1402
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1337 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/timetable/_table.html.erb
+++ b/app/views/timetable/_table.html.erb
@@ -60,7 +60,13 @@
               </div>
               <div class="bottom">
                 <div class="subject">
-                  <%= t.subject.code unless t.subject_id.nil? %>
+                  <% unless t.subject_id.nil? %>
+                  <% unless t.subject.elective_group_id.nil?   %>
+                    <%= shorten_string(t.subject.elective_group.name.to_s,10) %>
+                  <% else %>
+                    <%= t.subject.code  %>
+                  <% end %>
+                  <% end %>
                 </div>
                 <% if @config.include?('HR') %>
                   <% unless t.employee.nil? %>
