--- a/app/views/finance/fees_index.html.erb
+++ b/app/views/finance/fees_index.html.erb
@@ -29,29 +29,40 @@
 
   <% unless flash[:notice].nil? %><p class="flash-msg"><%= flash[:notice] %></p><% end %>
   <div class="box">
-  <div class="link-box">
-    <div class="link-heading"><%= link_to "#{t('create_fees')}  ", :action => "fees_create" %></div>
-    <div class="link-descr"><%= t('creates_master_fees_and_additional_fees') %></div>
-  </div>
+    <div class="link-box">
+      <div class="link-heading"><%= link_to "#{t('create_fees')}  ", :action => "fees_create" %></div>
+      <div class="link-descr"><%= t('creates_master_fees_and_additional_fees') %></div>
+    </div>
 
-  <div class="link-box">
-    <div class="link-heading"><%= link_to "#{t('fees_collection')}", :action => "fee_collection" %></div>
-    <div class="link-descr"><%= t('creates_new_fee_collecting_dates') %> </div>
-  </div>
+    <div class="link-box">
+      <div class="link-heading"><%= link_to "#{t('fees_collection')}", :action => "fee_collection" %></div>
+      <div class="link-descr"><%= t('creates_new_fee_collecting_dates') %> </div>
+    </div>
 
-  <div class="link-box">
-    <div class="link-heading"><%= link_to t('fees_text'), :controller => "finance" , :action => "fees_submission_index" %> </div>
-    <div class="link-descr"><%= t('fees_submission') %></div>
-  </div>
+    <div class="link-box">
+      <div class="link-heading"><%= link_to t('fees_text'), :controller => "finance" , :action => "fees_submission_index" %> </div>
+      <div class="link-descr"><%= t('fees_submission') %></div>
+    </div>
 
-  <div class="link-box">
-    <div class="link-heading"><%= link_to "#{t('fees_structure')}", :action => "fees_student_structure_search" %> </div>
-    <div class="link-descr"><%= t('displays_fees_structure_for_student') %></div>
-  </div>
+    <div class="link-box">
+      <div class="link-heading"><%= link_to "#{t('fees_structure')}", :action => "fees_student_structure_search" %> </div>
+      <div class="link-descr"><%= t('displays_fees_structure_for_student') %></div>
+    </div>
 
-  <div class="link-box">
-    <div class="link-heading"><%= link_to "#{t('fees_defaulters_text')}", :action => "fees_defaulters" %></div>
-    <div class="link-descr"><%= t('students_with_fees_dues') %> </div>
+    <div class="link-box">
+      <div class="link-heading"><%= link_to "#{t('fees_defaulters_text')}", :action => "fees_defaulters" %></div>
+      <div class="link-descr"><%= t('students_with_fees_dues') %> </div>
+    </div>
+
+    <!-- Instant Fees -->
+
+    <% FedenaPlugin::ADDITIONAL_LINKS[:instant_fees_index_link].each do |mod| %>
+      <%  if permitted_to? "#{mod[:destination][:action]}".to_sym,"#{mod[:destination][:controller]}".to_sym %>
+        <div class="link-box">
+          <div class="link-heading"><%= link_to "#{t("#{mod[:title]}")}",mod[:destination] %></div>
+          <div class="link-descr"><%= "#{t("#{mod[:description]}")}" %></div>
+        <% end %>
+      <% end %>
+    </div>
   </div>
-</div>
 </div>
